tdf#147083 wina11y: Return a11y object instead of child ID

Quoting MSAA doc about implementing child IDs [1]:

> # How Servers Implement Child IDs
>
> Server developers can assign child IDs to both simple elements and
> accessible objects. However, the recommended approach is to support the
> standard Component Object Model (COM) interface IEnumVARIANT in every
> accessible object that has children.
>
> If you implement IEnumVARIANT, you must:
>
> * Enumerate all children, both simple elements and accessible objects.
>   Provide child IDs for all simple elements and provide the IDispatch to
>   each accessible object.
> * For accessible objects, set the vt member of the VARIANT to
>   VT_DISPATCH. The pdispVal member must contain a pointer to the IDispatch
>   interface. Note that the VARIANT is allocated and freed by the client.
> * For simple elements, the child ID is any 32-bit positive integer.
>   Note that zero and negative integers are reserved by Microsoft Active
>   Accessibility. Set the VARIANT structure vt member to VT_I4 and the lVal
>   member to the child ID.
>
> If you do not support IEnumVARIANT, you must assign child IDs and
> number the children in each object sequentially starting with one.

So far, LibreOffice was returning negative "child IDs" instead of pointers
to accessible objects, which were not conformant to the MSAA
specification and not accepted by NVDA as valid child IDs
(s.a. discussion on the first version of my related NVDA pull request
to fix the announcement of a single selected cell in Calc, [2]).

Adapt that to return pointers to accessible objects and
drop the now unused 'CMAccessible::Get_XAccChildID'.

[1] https://docs.microsoft.com/en-us/windows/win32/winauto/how-servers-implement-child-ids
[2] https://github.com/nvaccess/nvda/pull/13277

Change-Id: I52a6f637adf334dee66627e6992451e6d81a7c9a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/129201
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>